Remove columns lat/long from Occurrence table

--- a/app/views/occurrences/new.html.erb
+++ b/app/views/occurrences/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Welcome to the Police Occurrence Form</h2>
+<h2>Welcome to Police Occurrence Form</h2>
 
 <p>Please, tell us what happened!</p>
 
