--- a/app/views/occurrences/new.html.erb
+++ b/app/views/occurrences/new.html.erb
@@ -8,7 +8,7 @@
 
   <p>
     <%= f.label :'occurrence_type:' %><br>
-    <%= f.select :occurrence_type, OccurrenceType.make_drop_down %> 
+    <%= f.select :occurrence_type_id, make_occurrences_drop_down %> 
   </p>
 
   <p>
