--- a/app/views/occurrences/new.html.erb
+++ b/app/views/occurrences/new.html.erb
@@ -3,14 +3,12 @@
 <p>Please, tell us what happened!</p>
 
 <%= form_for :occurrence, url: occurrences_path do |f| %>
-   
+  <p>
    <%= f.hidden_field :coordinate, value: "POINT(#{params[:lat]} #{params[:lng]})" %> 
-
   <p>
     <%= f.label :'occurrence_type:' %><br>
     <%= f.select :occurrence_type_id, make_occurrences_drop_down %> 
   </p>
-
   <p>
     <%= f.label :description %><br>
     <%= f.text_area :description %>
@@ -21,3 +19,14 @@
 <% end %>
 
 <%= link_to 'Back to map', root_path %>
+
+<% if @occurrence.errors.any? %>
+<div id = "error explanation">
+  <h3><%= pluralize(@occurrence.errors.count, "error") %> prohibited this form from being saved:</h3>
+  <ul>
+    <% @occurrence.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
