--- a/app/views/occurrences/new.html.erb
+++ b/app/views/occurrences/new.html.erb
@@ -2,15 +2,26 @@
 
 <p>Please, tell us what happened!</p>
 
+<% if @occurrence.errors.any? %>
+<div id = "error explanation">
+  <h3><%= pluralize(@occurrence.errors.count, "error") %> found! Check your form before continue:</h3>
+  <ul>
+    <% @occurrence.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
+
 <%= form_for :occurrence, url: occurrences_path do |f| %>
   <p>
    <%= f.hidden_field :coordinate, value: @occurrence.coordinate %> 
   <p>
-    <%= f.label :'occurrence_type:' %><br>
+    <%= f.label :occurrence_type, 'Occurrence type:' %><br>
     <%= f.select :occurrence_type_id, make_occurrences_drop_down %> 
   </p>
   <p>
-    <%= f.label :'description:' %><br>
+    <%= f.label :description, 'Description:' %><br>
     <%= f.text_area :description %>
   </p>
   <p>
@@ -19,14 +30,3 @@
 <% end %>
 
 <%= link_to 'Back to map', root_path %>
-
-<% if @occurrence.errors.any? %>
-<div id = "error explanation">
-  <h3><%= pluralize(@occurrence.errors.count, "error") %> found! Verify your form before continuing:</h3>
-  <ul>
-    <% @occurrence.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-</div>
-<% end %>
