--- a/app/views/occurrences/new.html.erb
+++ b/app/views/occurrences/new.html.erb
@@ -17,7 +17,7 @@
   <p>
    <%= f.hidden_field :coordinate, value: @occurrence.coordinate %> 
   <p>
-    <%= f.label :occurrence_type, 'Occurrence type:' %><br>
+    <%= f.label :occurrence_type_id, 'Occurrence type:' %><br>
     <%= f.select :occurrence_type_id, make_occurrences_drop_down %> 
   </p>
   <p>
