--- a/app/views/occurrences/index.html.erb
+++ b/app/views/occurrences/index.html.erb
@@ -1,2 +1,8 @@
 <div id="map">
 </div>
+
+<% for type, message in flash %>
+  <p class="message <%= type %>">
+    <%= message %> 
+  </p>
+<% end %>
