--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,4 +15,23 @@
  *= require_self
  */
 
- #map { width: 800px; height: 800px; }
+#map 
+{ 
+  height: 700px;
+  width: 800px;
+}
+
+#sidebar
+{
+  height: 700px;
+  width: 10%;
+  float:left;
+  overflow-y:auto;
+  border: 1px solid #999;
+}
+
+#sidebar p 
+{
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
