details in sidebar

--- a/app/views/occurrences/index.html.erb
+++ b/app/views/occurrences/index.html.erb
@@ -1,23 +1,10 @@
-<div class="container-fluid">
-  <div class="row">
-    <h1><small>Police Occurrence Prototype Map</small></h1>
-  </div>
+<h2>Police Occurrences Prototype Map</h2>
+
+<div id="sidebar"></div>
+<div id="map"></div>
 
 <% for type, message in flash %>
   <p class="message <%= type %>">
     <%= message %> 
   </p>
 <% end %>
-
-  <div class="row">
-      <div class="ka-reports">
-        <ul id="reports" class="nav nav-list bs-docs-sidenav afix"></ul>
-      </div>
-    <div id="map-column" class="col-lg-9">
-      <div id="sidebar"></div>
-      <div id="map"></div>
-    </div>
-  </div>
-
-</div>
-
